--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0-alpha3",
     "jquery": "^3.7.0",
